# Pyre

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Pyre/: CMakeLists.txt
Pyre/include/: Common.h
Pyre/include/containers/: SparseSet.h  Storage.h
Pyre/include/entity/: EntityTraits.h
Pyre/src/: Pyre.cpp
PyreTests/: CMakeLists.txt  TESTING.md
PyreTests/entity/: EntityTraitsTests.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
